Refactor discount strategy Add unit test Update diagram, README.md document
